<resources>
    <string name="About_us">About us</string>
    <string name="Potholes">Pothole</string>
    <string name="Distance_Traveled">Distance Traveled</string>
    <string name="Statistics">Statistics</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="Your_email">Your email</string>
    <string name="SEND_EMAIL">SEND EMAIL</string>
    <string name="Have_an_account">Have an account ?</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="select_language">Select Language</string>
    <string name="Language">Language</string>
    <string name="english">ENGLISH</string>
    <string name="vietnamese">VIETNAMESE</string>
    <string name="back">Back</string>
    <string name="rank">Rank</string>
    <string name="INFORMATION">INFORMATION</string>
    <string name="Username">Username</string>
    <string name="Update_Data">Update Data</string>
    <string name="Rating_App">Rating App</string>
    <string name="Company_Information">Company Information</string>
    <string name="Edit">Edit</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Recovery_Password">Recovery Password</string>
    <string name="Verify_Code">Verify Code</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="RECOVER_PASSWORD">RECOVER PASSWORD</string>
    <string name="Real_time_fluctuating_data">Real-time fluctuating data:</string>
    <string name="Wait_for_vibration_to_be_detected">Wait for vibration to be detected</string>
    <string name="Settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="Sensitivity">Sensitivity</string>
    <string name="Alert_Distance_Option">Alert Distance Option</string>
    <string name="Vibration_Alert">Vibration Alert</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="Account">Account</string>
    <string name="Logout">Logout</string>
    <string name="Password">Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="Forget_Password">Forget Password?</string>
    <string name="Or_Continue_With">Or Continue With</string>
    <string name="You_dont_have_an_account_yet">You dont have an account yet?</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="Create_your_new_account">Create your new account</string>
    <string name="Fullname">Full Name</string>
    <string name="I_understood_the">I understood the </string>
    <string name="brief_terms_and_policies">This document outlines the terms and privacy policy for the SmartRoad VNU app, developed by Team 9 as a free service. By using the app, you agree to the following terms and policies.</string>
    <string name="Terms_and_Policies">Terms and Policies</string>
    <string name="terms_and_policies">terms &amp; policies</string>
    <string name="This_policy_is_effective_as_of_October_10_2024">This policy is effective as of October 10, 2024</string>
    <string name="Current_Version">Current Version</string>
    <string name="Last_update_at">Last update at 12:00, 01/11/2024</string>
    <string name="Update_now">Update now</string>
    <string name="Enter_OTP">Enter OTP</string>
    <string name="Verify_OTP">Verify OTP</string>
    <string name="welcome_to_your_safe_route">Welcome to your safe route</string>
    <string name="Edit_Profile_Information">Edit Profile Information</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Rate_Our_App">Rate Our App</string>
    <string name="Submit">Submit</string>
    <string name="Open_Dashboard">Open Dashboard</string>
    <string name="Search_location">Search location...</string>
    <string name="Confirmed_Pothole">Confirmed Pothole?</string>
    <string name="Confirm">Confirm</string>
    <string name="Pop_up_will_be_hidden_in_10s">Pop-up will be hidden in 10s</string>
    <string name="Sign_up">Sign up</string>
    <string name="Sign_in">Sign in</string>
    <string name="Total_Potholes">Total Potholes</string>"
    <string name="Total_Kilometers">Total_Kilometers</string>
    <string name="Loading">Loading...</string>
    <string name="Navigation">Navigation</string>
    <string name="Start_Location">Start Location</string>
    <string name="Destination">Destination</string>
    <string name="Navigate">Navigate</string>
    <string name="Latitude">Latitude :</string>
    <string name="Longitude">Longitude :</string>
    <string name="Reported_by">Reported by :</string>
    <string name="Detected_at">Detected at :</string>
    <string name="Status">Status :</string>

    <string name="app_name">Authentication_UIUX</string>
    <string name="item_title">Item Title</string>
    <string name="item_content">Item Content</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>